@@ -13,7 +13,7 @@ If that URL should fail, try contacting the author.
 from .exception import ScreenShotError
 from .factory import mss
 
-__version__ = '3.0.2'
+__version__ = '3.0.3'
 __author__ = "Mickaël 'Tiger-222' Schoentgen"
 __copyright__ = """
     Copyright (c) 2013-2017, Mickaël 'Tiger-222' Schoentgen
