@@ -1,6 +1,7 @@
 # coding: utf-8
-""" This is part of the MSS Python's module.
-    Source: https://github.com/BoboTiG/python-mss
+"""
+This is part of the MSS Python's module.
+Source: https://github.com/BoboTiG/python-mss
 """
 
 import struct
